# portall_ws

./: .gitignore  AGENTS.md  BUSINESS_PLAN.md  CHANGELOG.md  CONVENTIONS.md  IMPLEMENTATION_PLAN.md  LICENSE  README.md  pyproject.toml  requirements.txt  smithery.yaml
.agent/commands/: cleanup.md
.github/workflows/: release.yml
docs/: api.md  architecture.md  excel_usage.md  mcp_quickstart.md  operator_guide.md
sample/: DeskPricer_Bitcoin_Demo.xlsx
scripts/: build_executable.py  create_demo_excel.py  generate_regression_fixtures.py  install_service.bat  run_desk_pricer.py  run_deskpricer.py  uninstall_service.bat
src/desk_pricer/: app.py  errors.py  logging_config.py  main.py  responses.py  schemas.py
src/desk_pricer/pricing/: __init__.py  american.py  conventions.py  cross_greeks.py  engine.py  european.py  implied_vol.py  pnl_attribution.py
src/deskpricer/: __init__.py  app.py  errors.py  logging_config.py  main.py  mcp_server.py  mcp_tools.py  responses.py  schemas.py  worker.py
src/deskpricer/pricing/: __init__.py  american.py  bsm_fast.py  constants.py  conventions.py  cross_greeks.py  engine.py  equivalence.py  european.py  implied_vol.py
src/deskpricer/routers/: _common.py  greeks.py  health.py  impliedvol.py  pnl_attribution.py  portfolio.py
src/deskpricer/services/: pricing_service.py  ql_runtime.py
tests/: conftest.py  test_american.py  test_american_european_reroute.py  test_api_contract.py  test_bsm_fast_parity.py  test_conventions_doc_exists.py  test_desk_regression.py  test_european.py  test_european_bsm.py  test_financial_golden.py  test_financial_regression.py  test_gamma_sub_tick_regression.py  test_greeks_numerical.py  test_logging.py  test_mcp_server.py  test_performance.py  test_pnl_attribution.py  test_properties.py  test_regression.py  test_theta_weekend_consistency.py  test_worker_pool.py
tests/fixtures/: american_single_stock_put.json  calendar_spread.json  covered_call.json  iron_condor.json  pnl_attribution_baseline.json  risk_reversal.json  vertical_spread.json  zero_dte_put.json
vba/: DeskPricerUDF.bas
