[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "desk-pricer"
version = "1.0.0"
description = "Local HTTP pricing microservice for vanilla equity options"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "John Zizhuo Huang", email = "john@example.com"}
]
keywords = ["quantitative", "finance", "options", "quantlib", "fastapi"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastapi>=0.100",
    "uvicorn[standard]>=0.23",
    "QuantLib>=1.33",
    "numpy>=1.24",
    "scipy>=1.10",
    "pydantic>=2.0",
    "xmltodict>=0.13",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "hypothesis>=6.82",
    "httpx>=0.24",
]

[project.scripts]
desk-pricer = "desk_pricer.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src/desk_pricer"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]
