[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deskpricer"
version = "3.4.0"
description = "Local options pricing for Excel and AI agents — HTTP API and MCP server for Greeks, IV, and PnL attribution"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "John Zizhuo Huang", email = "john.zizhuo.huang@gmail.com"}
]
keywords = [
    "quantitative",
    "finance",
    "options",
    "quantlib",
    "fastapi",
    "mcp",
    "mcp-server",
    "greeks",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "fastapi>=0.100",
    "uvicorn[standard]>=0.23",
    "QuantLib>=1.33",
    "numpy>=1.24",
    "scipy>=1.10",
    "pydantic>=2.0",
    "xmltodict>=0.13",
    "mcp>=1.0",
]

[project.urls]
Homepage = "https://github.com/JohnJohnJohnJohn/portall_ws"
Repository = "https://github.com/JohnJohnJohnJohn/portall_ws"
Documentation = "https://github.com/JohnJohnJohnJohn/portall_ws/blob/main/docs/mcp_quickstart.md"

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "hypothesis>=6.82",
    "httpx>=0.24",
    "mypy>=1.5",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_configs = false
ignore_missing_imports = true
disallow_untyped_defs = false
check_untyped_defs = false

[project.scripts]
deskpricer = "deskpricer.main:main"
deskpricer-mcp = "deskpricer.mcp_server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src/deskpricer"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]
